# factory-etl

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/factory_etl/: __init__.py  __main__.py  bootstrap.py  bronze_writer.py  cli.py  config.py  control_tables.py  errors.py  extractor.py  ids.py  logging_config.py  protocols.py  quarantine.py  query_runner.py  secrets.py
src/factory_etl/factory_queries/: __init__.py  catalog.py  models.py  renderer.py
src/factory_etl/factory_queries/masters/: articulos.sql
src/factory_etl/factory_queries/schemas/: articulos.json
terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/envs/: dev.tfvars.example  prod.tfvars.example
terraform/modules/bigquery/: main.tf
terraform/modules/secrets/: main.tf
terraform/modules/service_account/: main.tf
terraform/modules/storage/: main.tf
terraform/modules/wif/: main.tf
tests/: __init__.py  conftest.py
tests/fixtures/factorysoft/: articulos_tinito_ok.json
tests/security/: __init__.py  test_log_redaction.py  test_sql_injection.py
tests/unit/: __init__.py  test_bootstrap.py  test_bronze_writer.py  test_catalog.py  test_config.py  test_control_tables.py  test_errors.py  test_extractor.py  test_fixture_shape.py  test_ids.py  test_protocols_conformance.py  test_quarantine.py  test_query_runner.py  test_renderer.py  test_renderer_registry.py  test_secrets.py
